# seafile-server

./: .gitignore  CMakeLists.txt  README.markdown  lock.md
common/: rpc-service.c
fileserver/: fileop.go
include/: seafile-rpc.h
lib/: Makefile.am  filelock.vala  rpc_table.py
python/seafile/: rpcclient.py
python/seaserv/: api.py
server/: Makefile.am  filelock-mgr.c  filelock-mgr.h  http-server.c  repo-mgr.c  repo-op.c  repo-perm.c  seaf-server.c  seafile-session.c  seafile-session.h  upload-file.c
